# PetSpace

./: .gitignore  Home.py  crud.py  gerarSenha.py  pets.db  pyproject.toml
pages/: Funcionário.py  hashed_pw.pkl
