[tool.poetry]
name = "petspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
streamlit = "^1.25.0"
streamlit-extras = "^0.3.0"
streamlit-authenticator = "^0.2.2"
st-pages = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
